SQUASH Fixes for behat in mod_forum

--- a/theme/noname/scss/moodle/modules.scss
+++ b/theme/noname/scss/moodle/modules.scss
@@ -9,6 +9,17 @@ select {
     width: auto;
 }
 
+// Feedback module
+.path-mod-feedback .feedback_form .col-md-9,
+.path-mod-feedback .feedback_form .col-md-3,
+.path-mod-feedback .feedback_form .col-md-3 label {
+    width: 100%;
+}
+.path-mod-feedback .feedback_form .col-md-9 {
+    margin-left: 1rem;
+    margin-bottom: -2rem;
+}
+
 // Forum module
 
 .path-mod-forum .forumsearch {
@@ -610,3 +621,4 @@ div#dock {
 .assignfeedback_editpdf_menu {
     padding: 0;
 }
+
